# quickauto

./: .gitignore  README.md  first_git_clone.sh  init.sh
adp-repo/: README.md  dgist-artiv.md  f1tenth_gym_analysis.txt  main.md  main.typ  ros-humble.md  ros-humble.typ  rviz.md  rviz.typ  sumo.md  sumo.typ  w11.md  깃허브-사용법.md  제안발표-ppt-계획.md  중간발표_축소된계획.md  합의.md
adp-repo/_deprecated/: forza_stack_study.txt  misys.md  misys.typ  (+5 more)
adp-ros-packages/: README.md  퀵오토(route_handler.cpp) 수정본입니다(코어2개로 제한하고 빌드하면될것같아요))
adp-ros-packages/_deprecated/dongjak_ws/src/global_planner_its/: CMakeLists.txt  package.xml
adp-ros-packages/_deprecated/dongjak_ws/src/global_planner_its/config/: global_planner.yaml
adp-ros-packages/_deprecated/dongjak_ws/src/global_planner_its/launch/: global_planner.launch.py
adp-ros-packages/_deprecated/dongjak_ws/src/global_planner_its/msg/: WaypointLLAArray.msg
adp-ros-packages/_deprecated/dongjak_ws/src/global_planner_its/src/: global_planner_node.cpp
adp-ros-packages/_deprecated/dongjak_ws/src/its_map_loader/: CMakeLists.txt  package.xml
adp-ros-packages/_deprecated/dongjak_ws/src/its_map_loader/config/: its_map_loader.yaml
adp-ros-packages/_deprecated/dongjak_ws/src/its_map_loader/launch/: its_map_loader.launch.py
adp-ros-packages/_deprecated/dongjak_ws/src/its_map_loader/src/: its_map_loader_node.cpp
adp-ros-packages/_deprecated/turtlesim_rs/: Cargo.toml  package.xml
adp-ros-packages/_deprecated/turtlesim_rs/src/: lib.rs  turtle.rs  turtle_frame.rs  turtlesim.rs
adp-ros-packages/_deprecated/turtlesim_rs/tutorials/: telop_turtle_key.rs
adp-ros-packages/_ssu2_deprecated/control/ssu2_pid_longitudinal_controller/: Cargo.toml  README.md  package.xml
adp-ros-packages/_ssu2_deprecated/control/ssu2_pid_longitudinal_controller/src/: longitudinal_controller_base.rs  mod.rs  pid.rs  sync_data.rs
adp-ros-packages/_ssu2_deprecated/control/ssu2_simple_trajectory_follower/: Cargo.toml  README.md  package.xml
adp-ros-packages/_ssu2_deprecated/control/ssu2_simple_trajectory_follower/launch/: ssu2_simple_trajectory_follower.launch.xml
adp-ros-packages/_ssu2_deprecated/control/ssu2_simple_trajectory_follower/src/: main.rs
adp-ros-packages/_ssu2_deprecated/launch/ssu2_launch/: CMakeLists.txt  README.md  package.xml
adp-ros-packages/_ssu2_deprecated/launch/ssu2_launch/config/control/: default_preset.yaml
adp-ros-packages/_ssu2_deprecated/launch/ssu2_launch/launch/: ssu2.launch.xml
adp-ros-packages/_ssu2_deprecated/launch/ssu2_launch/launch/components/: ssu2_control_component.launch.xml
adp-ros-packages/_ssu2_deprecated/launch/ssu2_launch/rviz/: buf.txt  ssu.rviz
adp-ros-packages/_ssu2_deprecated/simulator/ssu2_simulator/: Cargo.toml  README.md  package.xml
adp-ros-packages/_ssu2_deprecated/ssu2_msgs/ssu2_api_msgs/: CMakeLists.txt  package.xml
adp-ros-packages/_ssu2_deprecated/ssu2_msgs/ssu2_api_msgs/msg/: OperationModeState.msg
adp-ros-packages/ssu2_ws/src/launch/ssu2_launch/: CMakeLists.txt  package.xml
adp-ros-packages/ssu2_ws/src/launch/ssu2_launch/config/vehicle/urdf/: vehicle.xacro
adp-ros-packages/ssu2_ws/src/launch/ssu2_launch/launch/: ssu2_launch.launch.xml
adp-ros-packages/ssu2_ws/src/launch/ssu2_launch/launch/components/: map.launch.xml  simulator.launch.xml  vehicle.launch.xml
adp-ros-packages/ssu2_ws/src/launch/ssu2_launch/rviz/: ssu2.rviz
adp-ros-packages/ssu2_ws/src/planner/ssu_global_planner/: CMakeLists.txt  README.md
adp-ros-packages/ssu2_ws/src/planner/ssu_global_planner/launch/: global_planner_launch.py
adp-ros-packages/ssu2_ws/src/vehicle/pickup_vehicle_launch/pickup_vehicle_description/: CMakeLists.txt  package.xml
adp-ros-packages/ssu2_ws/src/vehicle/pickup_vehicle_launch/pickup_vehicle_description/config/: vehicle_info.param.yaml
adp-ros-packages/ssu2_ws/src/vehicle/pickup_vehicle_launch/pickup_vehicle_description/mesh/: vehicle_pickup_simple.mtl
adp-ros-packages/ssu2_ws/src/vehicle/pickup_vehicle_launch/pickup_vehicle_description/urdf/: vehicle.xacro
adp-ros-packages/ssu2_ws/src/vehicle/sedan_vehicle_launch/sedan_vehicle_launch/: CMakeLists.txt  package.xml
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_global_planner_interfaces/: CMakeLists.txt  package.xml
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_global_planner_interfaces/msg/: GlobalLaneletInfo.msg
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_global_planner_interfaces/srv/: ChangeStart.srv
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_map_msgs/: CMakeLists.txt  package.xml
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_map_msgs/msg/: GPSCoordinates.msg  Route.msg
adp-ros-packages/ssu2_ws/ssu2_msgs/ssu2_map_msgs/srv/: FindShortestRoute.srv
fina/: README.md  add_plugins.sh  build.sh  config.yaml  load_autoware.sh  pkgs.txt  plugin_build.sh  plugin_pkgs.txt  pop.sh  run.sh  structure.md  z.sh
fina/fina_ws/src/planner/ssu_global_planner/: README.md  package.xml
fina/fina_ws/src/planner/ssu_global_planner/include/ssu_global_planner/: lanelet2_graph.hpp
fina/fina_ws/src/planner/ssu_global_planner/launch/: global_planner_launch.py
fina/fina_ws/src/planner/ssu_global_planner/src/: lanelet2_graph.cpp  ssu_global_planner_node.cpp
quick_ws/: .gitignore  README.md  del.sh  process.xsh  repos.yaml  reset_package.sh  run.sh  tempjy.sh
quick_ws/src/bridge/rviz_setgoal_to_mission_planning/: CMakeLists.txt  package.xml
quick_ws/src/bridge/rviz_setgoal_to_mission_planning/src/: simplied_routing.cpp  simplified_routing.hpp
quick_ws/src/tier4_autoware_msgs/tier4_external_api_msgs/tier4_external_api_msgs/: CMakeLists.txt
quick_ws/src/tier4_autoware_msgs/tier4_external_api_msgs/tier4_external_api_msgs/msg/: DecisionFactorPointCloud.msg  GpuStatus.msg  HddStatus.msg  NetworkStatus.msg  PlanningFactor.msg  PlanningFactorArray.msg  TrafficLightGroup.msg
quick_ws/src/tier4_autoware_msgs/tier4_external_api_msgs/tier4_external_api_msgs/srv/: SetPreferredLane.srv
quickauto/: README.md  init.sh  update.sh
quickauto/quick_ws/src/autoware_universe/control/autoware_pid_longitudinal_controller/autoware_pid_longitudinal_controller/: CMakeLists.txt
(+256 files in other folders)
