[package]
name = "turtlesim_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }
tiny-skia = "0.11"
rand = "0.9.2"
termion = "4.0"

rclrs = "0.6"
geometry_msgs = "*"
std_msgs = "*"
std_srvs = "*"
turtlesim_rs_msgs = "*"

[[bin]]
name = "turtlesim_node"
path = "src/turtlesim.rs"