<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ssu2_launch</name>
  <version>0.0.0</version>
  <description>
    ssu2_launch
  </description>
  <maintainer email="njuyoung35@gmail.com">njuyoung35</maintainer>
  <maintainer email="leejaeya@gmail.com">LeeJaeya-1</maintainer>
  <maintainer email="leehwanhi@gmail.com">LeeHwanhi</maintainer>
  
  <author email="njuyoung35@gmail.com">njuyoung35</author>
  <author email="leejaeya@gmail.com">LeeJaeya-1</author>
  <author email="leehwanhi@gmail.com">LeeHwanhi</author>
  
  <license>MIT</license>
  
  <depend>ssu2_control_launch</depend>
  <depend>ssu2_planning_launch</depend>
  <depend>ssu2_global_launch</depend>
  <depend>ssu2_simulator_launch</depend>
  
  <!-- PRESERVED_JINJA2_CODEGEN_START -->

  <!-- PRESERVED_JINJA2_CODEGEN_END -->

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>