<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_setgoal_to_mission_planning</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="njuyoung35@gmail.com">misys</maintainer>
  <license>TODO: License declaration</license>

  <!-- <buildtool_depend>ament_cmake</buildtool_depend> -->
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <depend>autoware_planning_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
